--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
     <div class="skill-row">
       <img class="developer" src="https://image.flaticon.com/icons/svg/759/759715.svg" alt="" height="150px">
       <h3>Developer</h3>
-      <p>If you need any help in developing a software or website <br>I am not the best person you can get but surely I can help</p>
+      <p>If you need any help in developing a software or website <br>I am not the best person you can get but surely I can help you out of problem</p>
     </div>
   </div>
   <hr>
   <div class="contact-me">
     <h2>Get In Touch</h2>
-    <h3>If you want to give me money </h3>
-    <p class="contact-message">I'm always ready to take it. It will be very kindful to me.</p>
+    <h3>If I can help you in any way </h3>
+    <p class="contact-message">I'm always ready to help.</p>
     <a class="btn" href="mailto:ar646976@gmail.com">CONTACT ME</a>
   </div>
 </div>
