--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <div class="profile">
     <img class="profile" src="images/akshay.jpg" alt="" height="150px">
     <h2>Hello!</h2>
-    <p class="intro">I am a student, a programmer,a gamer and <u>Inevitable.</u><br>I didn't ask to be super, and I'm no hero. </p>
+    <p class="intro">I am a student, a programmer and a gamer </u><br> </p>
   </div>
   <hr>
   <div class="skills">
@@ -33,12 +33,12 @@
 
       <img class="gaming" src="https://www.flaticon.com/premium-icon/icons/svg/834/834233.svg" alt="refresh ur page" >
         <h3>Gaming</h3>
-      <p>By day I'm a student doing programming and by night <br>I kill people for fun in video games..</p>
+      <p>By day I'm a student doing programming and by night <br>I kill people for fun in video games.. I am always open to making new connections at wwork or just chat wuith people ona deeper level.</p>
     </div>
     <div class="skill-row">
       <img class="developer" src="https://image.flaticon.com/icons/svg/759/759715.svg" alt="" height="150px">
       <h3>Developer</h3>
-      <p>If you need any help in developing a software or website <br>I am not the best person you can get but surely I can help you out of problem</p>
+      <p>I an open to any work or project opportunities  in developing a software or website <br>My most of work is in development in web and android.</p>
     </div>
   </div>
   <hr>
