--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="skill-row">
       <img class="developer" src="https://image.flaticon.com/icons/svg/759/759715.svg" alt="" height="150px">
       <h3>Developer</h3>
-      <p>I an open to any work or project opportunities  in developing a software or website <br>My most of work is in development in web and android.</p>
+      <p>I am open to any work or project opportunities  in developing a software or website <br>My most of work is in development in web and android.</p>
     </div>
   </div>
   <hr>
