--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
       <img class="gaming" src="https://www.flaticon.com/premium-icon/icons/svg/834/834233.svg" alt="refresh ur page" >
         <h3>Gaming</h3>
-      <p>By day I'm a student doing programming and by night <br>I kill people for fun in video games.. I am always open to making new connections at wwork or just chat wuith people ona deeper level.</p>
+      <p>By day I'm a student doing programming and by night <br>I kill people for fun in video games.. I am always open to making new connections at work or just chat wuith people ona deeper level.</p>
     </div>
     <div class="skill-row">
       <img class="developer" src="https://image.flaticon.com/icons/svg/759/759715.svg" alt="" height="150px">
