--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <p>By day I'm a student doing programming and by night <br>I kill people for fun in video games.. I am always open to making new connections at work or just chat wuith people ona deeper level.</p>
     </div>
     <div class="skill-row">
-      <img class="developer" src="https://image.flaticon.com/icons/svg/759/759715.svg" alt="" height="150px">
+      <img class="developer" src="images/coding.png" alt="" height="150px">
       <h3>Developer</h3>
       <p>I am  open to any work or project opportunities  in developing a software or website <br>My most of work is in development in web and android.</p>
     </div>
